Code wrokflow, nighty build added

--- a/.github/workflows/code-build-nightly-workflow.yml
+++ b/.github/workflows/code-build-nightly-workflow.yml
@@ -1,26 +1,26 @@
 name: Theme build check
 
 on:
-  pull_request:
-    branches: [master]
-    tags: ['**']
-  push:
-    branches: [master]
-    tags: ['**']
+  schedule:
+    - cron: '0 1 * * *'
 
 jobs:
   theme-build:
-    name: 'Build source code test | Node ${{ matrix.node-version }} | ${{ matrix.os }}'
+    name: 'Build source code test nightly | Node ${{ matrix.node-version }} | ${{ matrix.os }}'
     runs-on: ${{ matrix.os }}-latest
 
     strategy:
       matrix:
         os: [ubuntu, macos, windows]
         node-version: [16.x, 15.x, 14.x]
+        branch: [develop, develop, develop]
       fail-fast: false
 
     steps:
     - uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
+        ref: ${{ matrix.branch }}
 
     - name: Setup Node
       uses: actions/setup-node@v2
