Issue templates minor fixes

--- a/.github/ISSUE_TEMPLATE/BUG-REPORT.yml
+++ b/.github/ISSUE_TEMPLATE/BUG-REPORT.yml
@@ -48,6 +48,13 @@ body:
         - Opera
     validations:
       required: false
+  - type: input
+    id: type
+    attributes:
+      label: "Required module/theme"
+      placeholder: is_themecore or theme
+    validations:
+      required: true
   - type: textarea
     id: reprod
     attributes:
