--- a/config/theme.yml
+++ b/config/theme.yml
@@ -1,10 +1,10 @@
-name: falcon
-display_name: Falcon theme
-version: 3.0.2
+name: starter
+display_name: Starter theme
+version: 1.0.0
 author:
-  name: "Igor Stępień"
-  email: "igor@istepien.dev"
-  url: "https://github.com/Oksydan"
+  name: "Waynet"
+  email: "lukasz.janik@waynet.pl"
+  url: "https://waynet.io"
 
 meta:
   compatibility:
