--- a/.github/workflows/code-build-nightly-workflow.yml
+++ b/.github/workflows/code-build-nightly-workflow.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu, macos, windows]
-        node-version: [16.x, 15.x, 14.x]
+        node-version: [18.x, 17.x, 16.x, 15.x]
         branch: [develop, develop, develop]
       fail-fast: false
 
