--- a/config/assets.yml
+++ b/config/assets.yml
@@ -33,6 +33,9 @@ js:
   swipervendor:
     fileName: swipervendor.js
     priority: 1
+  jquery:
+    fileName: jquery.js
+    priority: 1
   product:
     fileName: product.js
     priority: 200
