--- a/.github/workflows/code-build-workflow.yml
+++ b/.github/workflows/code-build-workflow.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu, macos, windows]
-        node-version: [18.x, 17.x, 16.x, 15.x]
+        node-version: [20.X, 19.x, 18.x, 17.x, 16.x]
       fail-fast: false
 
     steps:
